# RUST

Rust_Course/programs/: Cargo.toml  README.md
Rust_Course/programs/src/: array.rs  array_pass_by_referencr.rs  arry_directly_pass.rs  bool_datatype.rs  borrow_rules.rs  bound_trait.rs  chanal.rs  char_datatype.rs  closure.rs  cmd_argument.rs  combinator.rs  constant.rs  daigling_reference.rs  enum_concept.rs  enum_store_value.rs  fetch_hashmap_value.rs  first_program.rs  float_datatype.rs  for_loop.rs  funtion.rs  funtion_pointer.rs  future_async_await.rs  generic_concept.rs  generic_with_enum.rs  generic_with_trait.rs  handle_error.rs  hashmap.rs  if_else.rs  impl_in_enum.rs  impl_in_struct.rs  inference.rs  integer.rs  iterator.rs  loop.rs  macros.rs  macros_fun.rs  main.rs  match.rs  module.rs  multi_chanal.rs  (+37 more)
Rust_Projects/Todo List Using Axum/: README.md
Rust_Projects/Todo List Using Axum/Frontend/: index.html  script.js  style.css
Rust_Projects/Todo List Using Axum/backend/: Cargo.toml
Rust_Projects/Todo List Using Axum/backend/src/: error.rs  main.rs  model.rs
Rust_Projects/actix_web_rhai_script_plus_rust/: Cargo.toml  README.md
Rust_Projects/actix_web_rhai_script_plus_rust/src/: add.rhai  main.rs  multiply.rhai
Rust_Projects/basic_authentication/: Cargo.toml  README.md
Rust_Projects/basic_authentication/src/: main.rs
Rust_Projects/calculator/: Cargo.toml
Rust_Projects/calculator/src/: main.rs
Rust_Projects/calculator/static/: index.html
Rust_Projects/compress_file_project/: Cargo.toml  README.md  compress_picture_file
Rust_Projects/compress_file_project/src/: main.rs
Rust_Projects/decompressed_file_project/: Cargo.toml  README.md
Rust_Projects/decompressed_file_project/src/: main.rs
Rust_Projects/desktop-app/: Cargo.toml  build.rs
Rust_Projects/desktop-app/ui/: appwindow.slint
Rust_Projects/download_image_project/: Cargo.toml  README.md
Rust_Projects/download_image_project/src/: main.rs
Rust_Projects/extract_links/: Cargo.toml  README.md
Rust_Projects/extract_links/src/: main.rs
Rust_Projects/firebase-plus-rust-crud/: Cargo.toml  README.md
Rust_Projects/firebase-plus-rust-crud/src/: main.rs
Rust_Projects/guessing_number_game/: Cargo.toml  README.md
Rust_Projects/guessing_number_game/src/: main.rs
Rust_Projects/making_api/: Cargo.toml  README.md
Rust_Projects/making_api/src/: main.rs
Rust_Projects/mongo-db-project/: Cargo.toml  makefile
Rust_Projects/mongo-db-project/src/: db.rs  error.rs  handler.rs  main.rs
Rust_Projects/password-vault/: Cargo.toml  passwords.json
Rust_Projects/password-vault/src/: main.rs  passwentry.rs
Rust_Projects/read_csv_file/: Cargo.toml  README.md  Sample.csv
Rust_Projects/read_csv_file/src/: main.rs
Rust_Projects/read_json/: Cargo.toml  README.md
Rust_Projects/read_json/src/: main.rs
Rust_Projects/snake_game/: Cargo.toml
Rust_Projects/snake_game/src/: draw.rs  game.rs  main.rs  snake.rs
Rust_Projects/tic_tac_toe_game/: README.md
Rust_Projects/write_json/: Cargo.toml  README.md
Solana/: README.md
Solana/Crpto wallet/solana-wallet-backend/: .env  Cargo.toml  metedata.json  wallet.json
Solana/Crpto wallet/solana-wallet-backend/src/: balance.rs  history.rs  import_wallet.rs  keystore.rs  main.rs  multi_account.rs  multichain_wallet.rs  receive.rs  routes.rs  send_nfts.rs  send_sol.rs  token.rs  wallet.rs
Solana/Crto-wallet/solana-wallet-backend/: Cargo.toml  wallet.json
Solana/Crto-wallet/solana-wallet-backend/src/: balance_check.rs  check_token_balance.rs  create_wallet.rs  export_wallet.rs  main.rs  receive.rs  send_sol.rs  stake.rs  token.rs  wallet.rs
Solana/solana-program/: Cargo.toml
Solana/spl-token-metadata/: token.json
Solana/wallet/: package-lock.json  package.json
(+91 files in other folders)
