[package]
name = "desktop-app"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
slint = "1.0"

[build-dependencies]
slint-build = "1.0"

[package.metadata.bundle]
name = "Income Divider"
identifier = "io.github.rodgtr1.profit-first-income-calculator-desktop"
description = "Diving up income into tax, owner, profit, and opex amounts."
