[package]
name = "mongo-db-project"
version = "0.1.0"
edition = "2021"  # No such edition as 2024 — latest valid edition is 2021

[dependencies]
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
warp = "0.3.6"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

futures = "0.3"

mongodb = { version = "2.8", features = ["tokio-runtime"] }
chrono = { version = "0.4", features = ["serde"] }


