[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.1", features = ["macros"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.111"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
tower-cookies = "0.11.0"
tower-http = { version = "0.6.2", features = ["fs", "cors"] }

[dev-dependencies]
anyhow = "1.0.79"
