[package]
name = "solana-wallet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Wallet + Key Management
bip39 = "2.0"
ed25519-dalek = "1.0"
rand = "0.8"
bs58 = "0.4"
sha2 = "0.10"
pbkdf2 = "0.10"
ed25519-bip32 = "0.3"
slip10_ed25519 = "0.1.3"
dotenvy = "0.15"

# Solana
solana-sdk = "1.18.26"
solana-client ="1.18.26"

solana-program = "1.18.26"
solana-account-decoder = "1.18.26"
solana-transaction-status = "1.18.26"

# SPL + Metaplex
spl-token = "4.0.0"
spl-associated-token-account = "2.3.0"
mpl-token-metadata = "3.0.0"

# Actix + Async
actix-web = "4.3"
tokio = { version = "1.28.2", features = ["full"] }
reqwest = { version = "0.11", features = ["multipart", "json"] }


# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3.3"
borsh = "1.5.0"

# HTTP client (for web3.storage upload)


# Utilities
base64 = "0.22.1"
qrcode = "0.12"
image = "0.24"
lazy_static = "1.5.0"
aes-gcm = "0.10"        # password encryption/decryption
argon2 = "0.5"          # password hashing/derivation
anyhow = "1.0.99"
actix-multipart = "0.7.2"
futures-util = "0.3.31"
tempfile = "3.21.0"
log = "0.4.28"
actix-cors = "0.7.1"
env_logger = "0.11.8"
bitcoin = { version = "0.32", features = ["base64", "rand"] }
hex = "0.4"
tiny-hderive = "0.3"
sha3 = "0.10"
k256 = "0.10"







