[package]
name = "solana-wallet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bip39 = "2.0"
ed25519-dalek = "1.0" 
rand = "0.8"
bs58 = "0.4"
solana-sdk = "1.18.26"
sha2 = "0.10"
pbkdf2 = "0.10"
ed25519-bip32 = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-web = "4.3"
solana-client = "1.18.26"
tokio = { version = "1.28.2", features = ["full"] }
spl-token = "4.0.0"
bincode = "1.3.3"
solana-program = "1.18.14"
base64 = "0.22.1"
solana-account-decoder = "1.18.26"
slip10_ed25519 = "0.1.3"
qrcode = "0.12"
image = "0.24"
lazy_static = "1.5.0"
aes-gcm = "0.10"        # password encryption/decryption
argon2 = "0.5"           # password hashing/derivation

